# bedtime-betty

./: .gitignore  README.md  main.py  prompts.json  pyproject.toml
app/: __init__.py  config.py
app/api/: __init__.py  artists.py  authors.py  common.py  descriptions.py  ideas.py  images.py  lessons.py  pages.py  stories.py  titles.py  views.py
app/database/: __init__.py  models.py
app/models/: __init__.py  database.py  validation.py
app/static/: apiClient.js~develop  app.js  preferences.js  settings.js  stories.js  styles.css  wizard.js
app/templates/: base.html  index.html  preferences.html  stories.html  stories.html~main
app/validation/: __init__.py  models.py
app/views/: __init__.py  __init__.py~develop  artists.py  artists.py~develop  authors.py  authors.py~develop  common.py  descriptions.py  ideas.py  images.py  lessons.py  pages.py  titles.py  titles.py~develop  views.py~develop
backend/: __init__.py
backend/api/: __init__.py  artists.py  authors.py  common.py  descriptions.py  ideas.py  images.py  lessons.py  (+4 more)
betty/: __init__.py  api.py  app.py  config.py  generator.py  prompt.py  prompts.py  types.py  utils.py
prompts/: artist_styles.md  artists.md  author_styles.md  authors.md  bedtime_betty.md  dall_e_prompt.md  descriptions.md  examples.md  ideas.md  images.md  lessons.md  lessons.md~develop  pages.md  pages.md~develop  paragraph.md  paragraphs.md  placeholders.md  placeholders.yaml  scenes.md  story.md  story_ideas.md  story_lessons.md  story_themes.md  story_titles.md  title.md  titles.md  too_many_pages.md
tests/: tests_api.py
(+83 files in other folders)
