[tool.poetry]
name = "beddybai"
version = "0.1.0"
description = ""
authors = ["David Young <dmyoung9@asu.edu>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
aiohttp = "^3.8.4"
openai = "^0.27.4"
tiktoken = "^0.3.3"
quart = "^0.18.4"
python-dotenv = "^1.0.0"
quart-sqlalchemy = "^2.0.0"
quart-cors = "^0.6.0"

[tool.poetry.group.dev.dependencies]
ruff = "^0.0.263"
black = "^23.3.0"
pre-commit = "^3.2.2"
mypy = "^1.2.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
